# weather-finder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  config.toml.example  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude-mpm/: PM_INSTRUCTIONS.md  configuration.yaml  pm_skills_registry.yaml
.claude-mpm/cache/: deployment_state.json
.claude-mpm/config/: project.json
.claude/agents/: .dependency_cache  .mpm_deployment_state  code-analyzer.md  local-ops.md  python-engineer.md  security.md
.claude/skills/skills-internal-comms/: .etag_cache.json
.claude/skills/skills-webapp-testing/: .etag_cache.json
.claude/skills/toolchains-ai-frameworks-dspy/: .etag_cache.json
.claude/skills/toolchains-ai-frameworks-langchain/: .etag_cache.json
.claude/skills/toolchains-ai-frameworks-langgraph/: .etag_cache.json
.claude/skills/toolchains-ai-protocols-mcp/: .etag_cache.json
.claude/skills/toolchains-ai-services-openrouter/: .etag_cache.json
.claude/skills/toolchains-ai-techniques-session-compression/: .etag_cache.json
.claude/skills/toolchains-javascript-testing-playwright/: .etag_cache.json
.claude/skills/universal-data-xlsx/: .etag_cache.json
app/: app.py  history.py  ski.py
launchd/: com.user.weather-alert.plist.template
src/weather_alert/: __init__.py  analysis.py  chart.py  cli.py  config.py  geocode.py  history.py  notify.py  rules.py  ski.py  utils.py  weather.py
tests/: test_analysis.py  test_config.py  test_geocode.py  test_history.py  test_notify.py  test_rules.py  test_ski.py  test_utils.py  test_weather.py
(+66 files in other folders)
