[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "weather-alert"
version = "0.1.0"
description = "macOS weather alert CLI tool using Open-Meteo"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
weather-alert = "weather_alert.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
