[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-alert"
version = "0.1.0"
description = "macOS weather alert CLI tool using Open-Meteo"
requires-python = ">=3.11"
authors = [
  {name = "GreenUnicorn"},
  {name = "Claude", email = "claude@anthropic.com"},
]
maintainers = [
  {name = "GreenUnicorn"},
]
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
weather-alert = "weather_alert.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/GreenUnicorn/weather-finder"
Repository = "https://github.com/GreenUnicorn/weather-finder"
